bindings/c/include/xtreme3d.h

__declspec(dllimport) double FreeformMeshFaceGroupsCount(double, double);
__declspec(dllimport) double FreeformMeshFaceGroupTriangleCount(double, double, double);
__declspec(dllimport) double FreeformCreateExplosionFX(double, double);
__declspec(dllimport) double FreeformExplosionFXReset(double);
__declspec(dllimport) double FreeformExplosionFXEnable(double, double);
__declspec(dllimport) double FreeformExplosionFXSetSpeed(double, double);
__declspec(dllimport) double FreeformSphereSweepIntersect(double, double, double, double);
__declspec(dllimport) double FreeformPointInMesh(double, double, double, double);
__declspec(dllimport) double FreeformMeshSetMaterial(double, double, char*);
__declspec(dllimport) double FreeformUseMeshMaterials(double, double);
__declspec(dllimport) double FreeformToFreeforms(double, double);
__declspec(dllimport) double FreeformMeshFaceGroupSetMaterial(double, double, double, char*);
__declspec(dllimport) char* FreeformMeshFaceGroupGetMaterial(double, double, double);
__declspec(dllimport) double FreeformCreateEmpty(double, double, double);
__declspec(dllimport) double FreeformAddMesh(double);
__declspec(dllimport) double FreeformMeshAddFaceGroup(double, double);
__declspec(dllimport) double FreeformMeshAddVertex(double, double, double, double, double);
__declspec(dllimport) double FreeformMeshAddNormal(double, double, double, double, double);
__declspec(dllimport) double FreeformMeshAddTexCoord(double, double, double, double);
__declspec(dllimport) double FreeformMeshAddSecondTexCoord(double, double, double, double);
__declspec(dllimport) double FreeformMeshAddTangent(double, double, double, double, double);
__declspec(dllimport) double FreeformMeshAddBinormal(double, double, double, double, double);
__declspec(dllimport) double FreeformMeshFaceGroupAddTriangle(double, double, double, double, double, double);
__declspec(dllimport) double FreeformMeshGenNormals(double, double);
__declspec(dllimport) double FreeformMeshGenTangents(double, double);
__declspec(dllimport) double FreeformMeshVerticesCount(double, double);
__declspec(dllimport) double FreeformMeshTranslate(double, double, double, double, double);
__declspec(dllimport) double FreeformMeshRotate(double, double, double, double, double);
__declspec(dllimport) double FreeformMeshScale(double, double, double, double, double);
__declspec(dllimport) double FreeformSave(double, char*);
__declspec(dllimport) double FreeformMeshGetVertex(double, double, double, double);
__declspec(dllimport) double FreeformMeshGetNormal(double, double, double, double);
__declspec(dllimport) double FreeformMeshGetTexCoord(double, double, double, double);
__declspec(dllimport) double FreeformMeshGetSecondTexCoord(double, double, double, double);
__declspec(dllimport) double FreeformMeshGetTangent(double, double, double, double);
__declspec(dllimport) double FreeformMeshGetBinormal(double, double, double, double);
__declspec(dllimport) double FreeformMeshFaceGroupGetIndex(double, double, double, double);
__declspec(dllimport) double FreeformMeshSetVertex(double, double, double, double, double, double);
__declspec(dllimport) double FreeformMeshSetNormal(double, double, double, double, double, double);
__declspec(dllimport) double FreeformMeshSetTexCoord(double, double, double, double, double);
__declspec(dllimport) double FreeformMeshSetSecondTexCoord(double, double, double, double, double);
__declspec(dllimport) double FreeformMeshSetTangent(double, double, double, double, double, double);
__declspec(dllimport) double FreeformMeshSetBinormal(double, double, double, double, double, double);
__declspec(dllimport) double FreeformMeshFaceGroupSetIndex(double, double, double, double, double);