bindings/python3/xtreme3d/x3dfuncs.py


x3d.FreeformMeshFaceGroupsCount.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshFaceGroupsCount.restype = ctypes.c_double
def FreeformMeshFaceGroupsCount(aFf, aMesh):
    return x3d.FreeformMeshFaceGroupsCount(aFf, aMesh)

x3d.FreeformMeshFaceGroupTriangleCount.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshFaceGroupTriangleCount.restype = ctypes.c_double
def FreeformMeshFaceGroupTriangleCount(aFf, aMesh, aFgr):
    return x3d.FreeformMeshFaceGroupTriangleCount(aFf, aMesh, aFgr)

x3d.FreeformCreateExplosionFX.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FreeformCreateExplosionFX.restype = ctypes.c_double
def FreeformCreateExplosionFX(aFf1, aEnable):
    return x3d.FreeformCreateExplosionFX(aFf1, aEnable)

x3d.FreeformExplosionFXReset.argtypes = [ctypes.c_double]
x3d.FreeformExplosionFXReset.restype = ctypes.c_double
def FreeformExplosionFXReset(aFf1):
    return x3d.FreeformExplosionFXReset(aFf1)

x3d.FreeformExplosionFXEnable.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FreeformExplosionFXEnable.restype = ctypes.c_double
def FreeformExplosionFXEnable(aFf1, aMode):
    return x3d.FreeformExplosionFXEnable(aFf1, aMode)

x3d.FreeformExplosionFXSetSpeed.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FreeformExplosionFXSetSpeed.restype = ctypes.c_double
def FreeformExplosionFXSetSpeed(aFf1, aSpeed):
    return x3d.FreeformExplosionFXSetSpeed(aFf1, aSpeed)

x3d.FreeformSphereSweepIntersect.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FreeformSphereSweepIntersect.restype = ctypes.c_double
def FreeformSphereSweepIntersect(aFreeform, aObj, aRadius, aVel):
    return x3d.FreeformSphereSweepIntersect(aFreeform, aObj, aRadius, aVel)

x3d.FreeformPointInMesh.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FreeformPointInMesh.restype = ctypes.c_double
def FreeformPointInMesh(aFreeform, aX, aY, aZ):
    return x3d.FreeformPointInMesh(aFreeform, aX, aY, aZ)

x3d.FreeformMeshSetMaterial.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_char_p]
x3d.FreeformMeshSetMaterial.restype = ctypes.c_double
def FreeformMeshSetMaterial(aFf, aMesh, aMaterial):
    return x3d.FreeformMeshSetMaterial(aFf, aMesh, aMaterial)

x3d.FreeformUseMeshMaterials.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FreeformUseMeshMaterials.restype = ctypes.c_double
def FreeformUseMeshMaterials(aFf, aMode):
    return x3d.FreeformUseMeshMaterials(aFf, aMode)

x3d.FreeformToFreeforms.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FreeformToFreeforms.restype = ctypes.c_double
def FreeformToFreeforms(aFreeform, aParent):
    return x3d.FreeformToFreeforms(aFreeform, aParent)

x3d.FreeformMeshFaceGroupSetMaterial.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_char_p]
x3d.FreeformMeshFaceGroupSetMaterial.restype = ctypes.c_double
def FreeformMeshFaceGroupSetMaterial(aFf, aMesh, aFg, aMatname):
    return x3d.FreeformMeshFaceGroupSetMaterial(aFf, aMesh, aFg, aMatname)

x3d.FreeformMeshFaceGroupGetMaterial.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshFaceGroupGetMaterial.restype = ctypes.c_char_p
def FreeformMeshFaceGroupGetMaterial(aFf, aMesh, aFgroup):
    return x3d.FreeformMeshFaceGroupGetMaterial(aFf, aMesh, aFgroup)

x3d.FreeformCreateEmpty.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FreeformCreateEmpty.restype = ctypes.c_double
def FreeformCreateEmpty(aMatlib1, aMatlib2, aParent):
    return x3d.FreeformCreateEmpty(aMatlib1, aMatlib2, aParent)

x3d.FreeformAddMesh.argtypes = [ctypes.c_double]
x3d.FreeformAddMesh.restype = ctypes.c_double
def FreeformAddMesh(aFf):
    return x3d.FreeformAddMesh(aFf)

x3d.FreeformMeshAddFaceGroup.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshAddFaceGroup.restype = ctypes.c_double
def FreeformMeshAddFaceGroup(aFf, aMesh):
    return x3d.FreeformMeshAddFaceGroup(aFf, aMesh)

x3d.FreeformMeshAddVertex.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshAddVertex.restype = ctypes.c_double
def FreeformMeshAddVertex(aFf, aMesh, aX, aY, aZ):
    return x3d.FreeformMeshAddVertex(aFf, aMesh, aX, aY, aZ)

x3d.FreeformMeshAddNormal.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshAddNormal.restype = ctypes.c_double
def FreeformMeshAddNormal(aFf, aMesh, aX, aY, aZ):
    return x3d.FreeformMeshAddNormal(aFf, aMesh, aX, aY, aZ)

x3d.FreeformMeshAddTexCoord.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshAddTexCoord.restype = ctypes.c_double
def FreeformMeshAddTexCoord(aFf, aMesh, aU, aV):
    return x3d.FreeformMeshAddTexCoord(aFf, aMesh, aU, aV)

x3d.FreeformMeshAddSecondTexCoord.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshAddSecondTexCoord.restype = ctypes.c_double
def FreeformMeshAddSecondTexCoord(aFf, aMesh, aU, aV):
    return x3d.FreeformMeshAddSecondTexCoord(aFf, aMesh, aU, aV)

x3d.FreeformMeshAddTangent.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshAddTangent.restype = ctypes.c_double
def FreeformMeshAddTangent(aFf, aMesh, aX, aY, aZ):
    return x3d.FreeformMeshAddTangent(aFf, aMesh, aX, aY, aZ)

x3d.FreeformMeshAddBinormal.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshAddBinormal.restype = ctypes.c_double
def FreeformMeshAddBinormal(aFf, aMesh, aX, aY, aZ):
    return x3d.FreeformMeshAddBinormal(aFf, aMesh, aX, aY, aZ)

x3d.FreeformMeshFaceGroupAddTriangle.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshFaceGroupAddTriangle.restype = ctypes.c_double
def FreeformMeshFaceGroupAddTriangle(aFf, aMesh, aFg, aI1, aI2, aI3):
    return x3d.FreeformMeshFaceGroupAddTriangle(aFf, aMesh, aFg, aI1, aI2, aI3)

x3d.FreeformMeshGenNormals.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshGenNormals.restype = ctypes.c_double
def FreeformMeshGenNormals(aFf, aMesh):
    return x3d.FreeformMeshGenNormals(aFf, aMesh)

x3d.FreeformMeshGenTangents.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshGenTangents.restype = ctypes.c_double
def FreeformMeshGenTangents(aFf, aMesh):
    return x3d.FreeformMeshGenTangents(aFf, aMesh)

x3d.FreeformMeshVerticesCount.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshVerticesCount.restype = ctypes.c_double
def FreeformMeshVerticesCount(aFf, aMesh):
    return x3d.FreeformMeshVerticesCount(aFf, aMesh)

x3d.FreeformMeshTranslate.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshTranslate.restype = ctypes.c_double
def FreeformMeshTranslate(aFf, aMesh, aX, aY, aZ):
    return x3d.FreeformMeshTranslate(aFf, aMesh, aX, aY, aZ)

x3d.FreeformMeshRotate.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshRotate.restype = ctypes.c_double
def FreeformMeshRotate(aFf, aMesh, aX, aY, aZ):
    return x3d.FreeformMeshRotate(aFf, aMesh, aX, aY, aZ)

x3d.FreeformMeshScale.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshScale.restype = ctypes.c_double
def FreeformMeshScale(aFf, aMesh, aX, aY, aZ):
    return x3d.FreeformMeshScale(aFf, aMesh, aX, aY, aZ)

x3d.FreeformSave.argtypes = [ctypes.c_double, ctypes.c_char_p]
x3d.FreeformSave.restype = ctypes.c_double
def FreeformSave(aFf, aFilename):
    return x3d.FreeformSave(aFf, aFilename)

x3d.FreeformMeshGetVertex.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshGetVertex.restype = ctypes.c_double
def FreeformMeshGetVertex(aFf, aMesh, aV, aIndex):
    return x3d.FreeformMeshGetVertex(aFf, aMesh, aV, aIndex)

x3d.FreeformMeshGetNormal.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshGetNormal.restype = ctypes.c_double
def FreeformMeshGetNormal(aFf, aMesh, aN, aIndex):
    return x3d.FreeformMeshGetNormal(aFf, aMesh, aN, aIndex)

x3d.FreeformMeshGetTexCoord.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshGetTexCoord.restype = ctypes.c_double
def FreeformMeshGetTexCoord(aFf, aMesh, aT, aIndex):
    return x3d.FreeformMeshGetTexCoord(aFf, aMesh, aT, aIndex)

x3d.FreeformMeshGetSecondTexCoord.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshGetSecondTexCoord.restype = ctypes.c_double
def FreeformMeshGetSecondTexCoord(aFf, aMesh, aT, aIndex):
    return x3d.FreeformMeshGetSecondTexCoord(aFf, aMesh, aT, aIndex)

x3d.FreeformMeshGetTangent.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshGetTangent.restype = ctypes.c_double
def FreeformMeshGetTangent(aFf, aMesh, aT, aIndex):
    return x3d.FreeformMeshGetTangent(aFf, aMesh, aT, aIndex)

x3d.FreeformMeshGetBinormal.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshGetBinormal.restype = ctypes.c_double
def FreeformMeshGetBinormal(aFf, aMesh, aB, aIndex):
    return x3d.FreeformMeshGetBinormal(aFf, aMesh, aB, aIndex)

x3d.FreeformMeshFaceGroupGetIndex.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshFaceGroupGetIndex.restype = ctypes.c_double
def FreeformMeshFaceGroupGetIndex(aFf, aMesh, aFg, aIndex):
    return x3d.FreeformMeshFaceGroupGetIndex(aFf, aMesh, aFg, aIndex)

x3d.FreeformMeshSetVertex.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshSetVertex.restype = ctypes.c_double
def FreeformMeshSetVertex(aFf, aMesh, aV, aX, aY, aZ):
    return x3d.FreeformMeshSetVertex(aFf, aMesh, aV, aX, aY, aZ)

x3d.FreeformMeshSetNormal.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshSetNormal.restype = ctypes.c_double
def FreeformMeshSetNormal(aFf, aMesh, aN, aX, aY, aZ):
    return x3d.FreeformMeshSetNormal(aFf, aMesh, aN, aX, aY, aZ)

x3d.FreeformMeshSetTexCoord.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshSetTexCoord.restype = ctypes.c_double
def FreeformMeshSetTexCoord(aFf, aMesh, aT, aU, aV):
    return x3d.FreeformMeshSetTexCoord(aFf, aMesh, aT, aU, aV)

x3d.FreeformMeshSetSecondTexCoord.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshSetSecondTexCoord.restype = ctypes.c_double
def FreeformMeshSetSecondTexCoord(aFf, aMesh, aT, aU, aV):
    return x3d.FreeformMeshSetSecondTexCoord(aFf, aMesh, aT, aU, aV)

x3d.FreeformMeshSetTangent.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshSetTangent.restype = ctypes.c_double
def FreeformMeshSetTangent(aFf, aMesh, aT, aX, aY, aZ):
    return x3d.FreeformMeshSetTangent(aFf, aMesh, aT, aX, aY, aZ)

x3d.FreeformMeshSetBinormal.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshSetBinormal.restype = ctypes.c_double
def FreeformMeshSetBinormal(aFf, aMesh, aB, aX, aY, aZ):
    return x3d.FreeformMeshSetBinormal(aFf, aMesh, aB, aX, aY, aZ)

x3d.FreeformMeshFaceGroupSetIndex.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshFaceGroupSetIndex.restype = ctypes.c_double
def FreeformMeshFaceGroupSetIndex(aFf, aMesh, aFg, aIndex, aI):
    return x3d.FreeformMeshFaceGroupSetIndex(aFf, aMesh, aFg, aIndex, aI)
